--- a/services.html
+++ b/services.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Explore our comprehensive services including dumpster rentals, excavation, and hauling at Better Dumpsters Today. Get pricing details here!">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/yourkitcode.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/8.0.7/swiper-bundle.min.css">
 </head>
 
 <body>
@@ -16,7 +17,7 @@
     <div class="logo">
         <img src="img/dumpster-logo.jpg" alt="Better Dumpsters Today Logo for waste management services">
     </div>
-    <button class="menu-toggle">☰</button>
+    <button class="menu-toggle" aria-label="Toggle menu">☰</button>
     <nav>
         <a href="index.html" class="nav-link"><i class="fas fa-home"></i> Home</a>
         <a href="services.html" class="nav-link">Services & Pricing</a>
@@ -31,57 +32,127 @@
         <div id="dumpster-services" class="service">
             <h3><i class="fas fa-dumpster"></i> Dumpster Services</h3>
             <p>We provide dumpsters of various sizes for different types of waste, whether it be for residential or commercial projects.</p>
-            <table>
-                <thead>
-                <tr>
-                    <th>Size</th>
-                    <th>Price (Tons Included)</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr><td>40-Yard Dumpster</td><td>$900 (5 Tons)</td></tr>
-                <tr><td>30-Yard Dumpster</td><td>$750 (4 Tons)</td></tr>
-                <tr><td>25-Yard Dumpster</td><td>$700 (3 Tons)</td></tr>
-                <tr><td>20-Yard Dumpster</td><td>$650 (2.5 Tons)</td></tr>
-                </tbody>
-            </table>
+            <div class="center-text">
+                <table>
+                    <thead>
+                    <tr>
+                        <th>Size</th>
+                        <th>Price (Tons Included)</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr><td>40-Yard Dumpster</td><td>$900 (5 Tons)</td></tr>
+                    <tr><td>30-Yard Dumpster</td><td>$750 (4 Tons)</td></tr>
+                    <tr><td>25-Yard Dumpster</td><td>$700 (3 Tons)</td></tr>
+                    <tr><td>20-Yard Dumpster</td><td>$650 (2.5 Tons)</td></tr>
+                    </tbody>
+                </table>
+            </div>
             <a href="#" class="cta-button">Get a Quote</a>
         </div>
         <div id="excavation-services" class="service">
             <h3><i class="fas fa-tractor"></i> Excavation & Land Clearing</h3>
             <p>Our experienced team offers excavation and land clearing services, perfect for any construction project.</p>
-            <table>
-                <thead>
-                <tr>
-                    <th>Equipment</th>
-                    <th>Weekly Rate</th>
-                    <th>Daily Rate</th>
-                    <th>Daily Rate with Operator</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr><td>Bobcat</td><td>$2500</td><td>$450</td><td>$900</td></tr>
-                <tr><td>Mini Excavator</td><td>$2500</td><td>$450</td><td>$900</td></tr>
-                </tbody>
-            </table>
+            <div class="center-text">
+                <table>
+                    <thead>
+                    <tr>
+                        <th>Equipment</th>
+                        <th>Weekly Rate</th>
+                        <th>Daily Rate</th>
+                        <th>Daily Rate with Operator</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr><td>Bobcat</td><td>$2500</td><td>$450</td><td>$900</td></tr>
+                    <tr><td>Mini Excavator</td><td>$2500</td><td>$450</td><td>$900</td></tr>
+                    </tbody>
+                </table>
+            </div>
             <a href="#" class="cta-button">Learn More</a>
         </div>
         <div id="hauling-services" class="service">
             <h3><i class="fas fa-truck-moving"></i> Dump Trucking & Hauling</h3>
             <p>We offer dump trucking and hauling services for construction waste, residential cleanups, and more.</p>
-            <ul>
-                <li>$90/hr, Plus 1 Hr Travel, 4hr minimum</li>
-            </ul>
+            <div class="center-text">
+                <table>
+                    <thead>
+                    <tr>
+                        <th>Service</th>
+                        <th>Rate</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr><td>Hourly Rate</td><td>$90/hr</td></tr>
+                    <tr><td>Travel Time</td><td>1 Hr Minimum</td></tr>
+                    <tr><td>Minimum Service Hours</td><td>4 Hours</td></tr>
+                    </tbody>
+                </table>
+            </div>
             <a href="#" class="cta-button">Schedule Service</a>
         </div>
     </div>
 </section>
 
-<!-- Testimonials or FAQ Section -->
-<section id="testimonials-faq">
-    <h2>Client Testimonials & FAQs</h2>
-    <div class="testimonial-faq-grid">
-        <div class="testimonial">
-            <blockquote>
-                <p>"Exceptional service! The team was prompt, professional, and made our project run smoothly."</p>
-                <cite>- Jane
+<!-- Testimonials Section -->
+<section id="testimonials">
+    <h2>What Our Clients Say</h2>
+    <div class="testimonial-carousel swiper-container">
+        <div class="swiper-wrapper">
+            <div class="swiper-slide">
+                <blockquote>
+                    <p>"Exceptional service! The team was prompt, professional, and made our project run smoothly."</p>
+                    <cite>- Jane</cite>
+                </blockquote>
+            </div>
+            <!-- Add more testimonials here -->
+        </div>
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
+    </div>
+</section>
+
+<!-- Enhanced Footer -->
+<footer>
+    <div class="footer-content">
+        <div class="footer-section">
+            <h3>Contact Us</h3>
+            <p><a href="tel:240-960-6005">240-960-6005</a></p>
+            <p><a href="mailto:info@betterdumpsters.com">info@betterdumpsters.com</a></p>
+        </div>
+        <div class="footer-section">
+            <h3>Quick Links</h3>
+            <ul>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="blog.html">Blog</a></li>
+            </ul>
+        </div>
+        <div class="footer-section">
+            <h3>Follow Us</h3>
+            <p><a href="#" aria-label="Facebook">Facebook</a>, <a href="#" aria-label="Instagram">Instagram</a></p>
+        </div>
+    </div>
+    <p class="copyright">Better Dumpsters Today © 2024. All Rights Reserved.</p>
+</footer>
+
+<!-- Scripts -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/8.0.7/swiper-bundle.min.js" defer></script>
+<script src="js/app.js" defer></script>
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        // Initialize testimonial carousel
+        new Swiper('.testimonial-carousel', {
+            loop: true,
+            autoplay: {
+                delay: 5000,
+            },
+            navigation: {
+                nextEl: '.swiper-button-next',
+                prevEl: '.swiper-button-prev',
+            },
+        });
+    });
+</script>
+</body>
+
+</html>
