--- a/index.html
+++ b/index.html
@@ -15,112 +15,157 @@
 <body>
 
 <!-- Header with Enhanced Navigation -->
-<header>
+<header style="background: white; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); padding: 10px 20px;">
   <div class="logo">
-    <img src="img/dumpster-logo.jpg" alt="Better Dumpsters Today Logo for waste management services">
+    <img src="img/logo-clear-2.jpg" alt="Better Dumpsters Today Logo for waste management services" style="max-height: 120px; width: auto; padding: 5px;">
   </div>
-  <button class="menu-toggle" aria-label="Toggle menu">☰</button>
-  <nav>
-    <a href="index.html" class="nav-link"><i class="fas fa-home"></i> Home</a>
-    <a href="services.html" class="nav-link">Services & Pricing</a>
-    <a href="contact.html" class="nav-link">Contact & Scheduling</a>
+  <button class="menu-toggle" aria-label="Toggle menu" style="background: none; border: none; color: var(--primary-color); font-size: 24px; cursor: pointer;">☰</button>
+  <nav style="display: flex; align-items: center;">
+    <a href="index.html" class="nav-link" style="color: var(--primary-color); margin: 0 15px; text-decoration: none; font-weight: bold; transition: color 0.3s;"><i class="fas fa-home"></i> Home</a>
+    <a href="services.html" class="nav-link" style="color: var(--primary-color); margin: 0 15px; text-decoration: none; font-weight: bold; transition: color 0.3s;">Services & Pricing</a>
+    <a href="contact.html" class="nav-link" style="color: var(--primary-color); margin: 0 15px; text-decoration: none; font-weight: bold; transition: color 0.3s;">Contact & Scheduling</a>
   </nav>
 </header>
 
-<!-- Hero Section with Responsive Background -->
-<section id="home" class="hero" style="background-image: url('images/hero-bg.jpg'); background-size: cover; background-position: center;">
-  <div class="hero-content">
-    <h1>Your Trusted Partner for Dumpster Rentals & Hauling Services</h1>
-    <p>Whether residential or commercial, we handle all your waste management needs.</p>
-    <button onclick="document.getElementById('quoteForm').style.display='block'" class="cta-button">Get a Free Quote</button>
-    <a href="services.html" class="cta-button secondary">Learn More</a>
-  </div>
 
-  <!-- Quote Form Modal -->
-  <div id="quoteForm" class="modal" role="dialog" aria-labelledby="quoteFormTitle" aria-hidden="true">
-    <div class="modal-content">
-      <span class="close" onclick="document.getElementById('quoteForm').style.display='none'" aria-label="Close">&times;</span>
-      <h2 id="quoteFormTitle">Request a Free Quote</h2>
-      <form id="quoteForm" aria-labelledby="quoteFormTitle">
-        <input type="text" placeholder="Your Name" required aria-label="Your Name">
-        <input type="email" placeholder="Your Email" required aria-label="Your Email">
-        <input type="tel" placeholder="Phone Number" required aria-label="Phone Number">
-        <textarea placeholder="Project Details" required aria-label="Project Details"></textarea>
-        <button type="submit" class="submit-button">Submit</button>
-      </form>
-    </div>
+
+<!-- Hero Section with Enhanced Design -->
+<section id="home" class="hero" style="background-image: url('images/hero-bg.jpg'); background-size: cover; background-position: center; padding: 100px 20px; text-align: center; color: white;">
+  <div class="hero-content" style="max-width: 800px; margin: 0 auto;">
+    <h1 style="font-size: 2.5rem; font-weight: bold; margin-bottom: 20px; text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);">Your Trusted Partner for Dumpster Rentals & Hauling Services</h1>
+    <p style="font-size: 1.2rem; margin-bottom: 30px; text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);">Whether residential or commercial, we handle all your waste management needs.</p>
+    <button onclick="document.getElementById('quoteForm').style.display='block'" class="cta-button" style="background-color: var(--secondary-color); color: white; padding: 15px 30px; border: none; font-size: 1rem; cursor: pointer; transition: background-color 0.3s;">Get a Free Quote</button>
+    <a href="services.html" class="cta-button secondary" style="margin-left: 15px; padding: 15px 30px; border: 2px solid white; color: white; text-decoration: none; font-size: 1rem; transition: background-color 0.3s, color 0.3s;">Learn More</a>
   </div>
 </section>
 
-<!-- Services Overview with Icons -->
-<section id="services">
-  <h2>Our Services</h2>
-  <div class="service">
-    <h3><i class="fas fa-dumpster"></i> Dumpster Services</h3>
-    <p>We provide dumpsters of various sizes for different types of waste, whether it be for residential or commercial projects.</p>
-    <div class="equipment-images">
-      <img src="img/dumpster2.jpg" alt="Dumpster service image 1" class="service-image">
-      <img src="img/dumpster3.jpg" alt="Dumpster service image 2" class="service-image">
-    </div>
-    <a href="services.html#dumpster-services" class="learn-more">Learn More</a>
+<!-- Quote Form Modal -->
+<div id="quoteForm" class="modal" role="dialog" aria-labelledby="quoteFormTitle" aria-hidden="true" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.5); z-index: 1000; overflow: auto;">
+  <div class="modal-content" style="background-color: white; margin: 10% auto; padding: 20px; width: 90%; max-width: 500px; border-radius: 8px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); position: relative;">
+    <span class="close" onclick="document.getElementById('quoteForm').style.display='none'" aria-label="Close" style="position: absolute; top: 10px; right: 15px; font-size: 24px; color: #555; cursor: pointer;">&times;</span>
+    <h2 id="quoteFormTitle" style="font-size: 1.5rem; margin-bottom: 20px; text-align: center; color: var(--primary-color);">Request a Free Quote</h2>
+    <form id="quoteForm" aria-labelledby="quoteFormTitle" style="display: flex; flex-direction: column; gap: 15px;">
+      <input type="text" placeholder="Your Name" required aria-label="Your Name" style="padding: 10px; font-size: 1rem; border: 1px solid #ddd; border-radius: 4px; width: 100%;">
+      <input type="email" placeholder="Your Email" required aria-label="Your Email" style="padding: 10px; font-size: 1rem; border: 1px solid #ddd; border-radius: 4px; width: 100%;">
+      <input type="tel" placeholder="Phone Number" required aria-label="Phone Number" style="padding: 10px; font-size: 1rem; border: 1px solid #ddd; border-radius: 4px; width: 100%;">
+      <textarea placeholder="Project Details" required aria-label="Project Details" style="padding: 10px; font-size: 1rem; border: 1px solid #ddd; border-radius: 4px; width: 100%; height: 100px;"></textarea>
+      <button type="submit" class="submit-button" style="padding: 12px; font-size: 1rem; background-color: var(--primary-color); color: white; border: none; border-radius: 4px; cursor: pointer; transition: background-color 0.3s;">Submit</button>
+    </form>
   </div>
-  <div class="service">
-    <h3><i class="fas fa-tractor"></i> Excavation & Land Clearing</h3>
-    <p>Our experienced team offers excavation and land clearing services, perfect for any construction project.</p>
-    <div class="equipment-images">
-      <img src="img/IMG_3371.jpg" alt="Excavation equipment" class="service-image">
-      <img src="img/IMG_3370.jpg" alt="Excavation equipment" class="service-image">
+</div>
+</section>
+
+<!-- Services Overview with Enhanced Design -->
+<section id="services" style="padding: 50px 20px; background-color: #f9f9f9; text-align: center;">
+  <h2 style="font-size: 2rem; color: var(--primary-color); margin-bottom: 40px;">Our Services</h2>
+
+  <div class="service" style="margin-bottom: 40px;">
+    <h3 style="font-size: 1.5rem; color: var(--secondary-color); margin-bottom: 15px;">
+      <i class="fas fa-dumpster" style="color: var(--primary-color);"></i> Dumpster Services
+    </h3>
+    <p style="font-size: 1rem; margin-bottom: 20px;">We provide dumpsters of various sizes for different types of waste, whether it be for residential or commercial projects.</p>
+    <div class="equipment-images" style="display: flex; justify-content: center; gap: 20px; margin-bottom: 20px;">
+      <img src="img/dumpster2.jpg" alt="Dumpster service image 1" class="service-image" style="max-width: 300px; width: 100%; height: 200px; object-fit: cover; border-radius: 8px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
+      <img src="img/dumpster3.jpg" alt="Dumpster service image 2" class="service-image" style="max-width: 300px; width: 100%; height: 200px; object-fit: cover; border-radius: 8px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
     </div>
-    <a href="services.html#excavation-services" class="learn-more">Learn More</a>
+    <a href="services.html#dumpster-services" class="learn-more" style="text-decoration: none; color: var(--primary-color); font-weight: bold; transition: color 0.3s;">Learn More</a>
   </div>
-  <div class="service">
-    <h3><i class="fas fa-truck-moving"></i> Dump Trucking & Hauling</h3>
-    <p>We offer dump trucking and hauling services for construction waste, residential cleanups, and more.</p>
-    <div class="truck-image">
-      <img src="img/IMG_3372.jpg" alt="Dump Truck" class="service-image">
+
+  <div class="service" style="margin-bottom: 40px;">
+    <h3 style="font-size: 1.5rem; color: var(--secondary-color); margin-bottom: 15px;">
+      <i class="fas fa-tractor" style="color: var(--primary-color);"></i> Excavation & Land Clearing
+    </h3>
+    <p style="font-size: 1rem; margin-bottom: 20px;">Our experienced team offers excavation and land clearing services, perfect for any construction project.</p>
+    <div class="equipment-images" style="display: flex; justify-content: center; gap: 20px; margin-bottom: 20px;">
+      <img src="img/IMG_3371.jpg" alt="Excavation equipment" class="service-image" style="max-width: 300px; width: 100%; height: 200px; object-fit: cover; border-radius: 8px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
+      <img src="img/IMG_3370.jpg" alt="Excavation equipment" class="service-image" style="max-width: 300px; width: 100%; height: 200px; object-fit: cover; border-radius: 8px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
     </div>
-    <a href="services.html#hauling-services" class="learn-more">Learn More</a>
+    <a href="services.html#excavation-services" class="learn-more" style="text-decoration: none; color: var(--primary-color); font-weight: bold; transition: color 0.3s;">Learn More</a>
+  </div>
+
+  <div class="service">
+    <h3 style="font-size: 1.5rem; color: var(--secondary-color); margin-bottom: 15px;">
+      <i class="fas fa-truck-moving" style="color: var(--primary-color);"></i> Dump Trucking & Hauling
+    </h3>
+    <p style="font-size: 1rem; margin-bottom: 20px;">We offer dump trucking and hauling services for construction waste, residential cleanups, and more.</p>
+    <div class="truck-image" style="display: flex; justify-content: center; margin-bottom: 20px;">
+      <img src="img/IMG_3372.jpg" alt="Dump Truck" class="service-image" style="max-width: 300px; width: 100%; height: 200px; object-fit: cover; border-radius: 8px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
+    </div>
+    <a href="services.html#hauling-services" class="learn-more" style="text-decoration: none; color: var(--primary-color); font-weight: bold; transition: color 0.3s;">Learn More</a>
   </div>
 </section>
 
-<!-- Testimonials with Carousel -->
-<section id="testimonials">
-  <h2>What Our Clients Say</h2>
-  <div class="testimonial-carousel swiper-container">
+
+<!-- Testimonials with Enhanced Carousel -->
+<section id="testimonials" style="background-color: #f9f9f9; padding: 50px 20px; text-align: center;">
+  <h2 style="font-size: 2rem; color: var(--primary-color); margin-bottom: 30px;">What Our Clients Say</h2>
+  <div class="testimonial-carousel swiper-container" style="max-width: 800px; margin: 0 auto;">
     <div class="swiper-wrapper">
-      <div class="swiper-slide">
-        <blockquote>
+      <div class="swiper-slide" style="padding: 20px; background: #fff; border-radius: 8px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
+        <blockquote style="font-style: italic; font-size: 1.2rem; line-height: 1.5; margin-bottom: 20px; color: #333;">
           <p>"Efficient, on-time, and professional service. Highly recommended for any dumpster rental needs."</p>
-          <cite>- John Doe, Construction Manager</cite>
+          <cite style="display: block; margin-top: 15px; font-size: 1rem; color: var(--secondary-color);">- John Doe, Construction Manager</cite>
         </blockquote>
       </div>
-      <!-- Add more testimonials here -->
+      <div class="swiper-slide" style="padding: 20px; background: #fff; border-radius: 8px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
+        <blockquote style="font-style: italic; font-size: 1.2rem; line-height: 1.5; margin-bottom: 20px; color: #333;">
+          <p>"The team was prompt and professional. Their dumpster service made our project stress-free."</p>
+          <cite style="display: block; margin-top: 15px; font-size: 1rem; color: var(--secondary-color);">- Jane Smith, Homeowner</cite>
+        </blockquote>
+      </div>
+      <!-- Add more testimonials as needed -->
     </div>
+    <!-- Carousel Navigation Buttons -->
+    <div class="swiper-button-next" style="color: var(--primary-color);"></div>
+    <div class="swiper-button-prev" style="color: var(--primary-color);"></div>
   </div>
 </section>
 
+<!-- Swiper Initialization Script -->
+<script>
+  document.addEventListener('DOMContentLoaded', function () {
+    new Swiper('.testimonial-carousel', {
+      loop: true,
+      autoplay: {
+        delay: 5000,
+      },
+      navigation: {
+        nextEl: '.swiper-button-next',
+        prevEl: '.swiper-button-prev',
+      },
+      slidesPerView: 1,
+      spaceBetween: 20,
+    });
+  });
+</script>
+
+
 <!-- Enhanced Footer -->
-<footer>
-  <div class="footer-content">
-    <div class="footer-section">
-      <h3>Contact Us</h3>
-      <p><a href="tel:240-960-6005">240-960-6005</a></p>
-      <p><a href="mailto:info@betterdumpsters.com">info@betterdumpsters.com</a></p>
+<footer style="background-color: #333; color: white; padding: 40px 20px; text-align: center;">
+  <div class="footer-content" style="display: flex; flex-wrap: wrap; justify-content: space-between; gap: 20px; max-width: 1200px; margin: 0 auto;">
+    <div class="footer-section" style="flex: 1; min-width: 200px;">
+      <h3 style="font-size: 1.5rem; margin-bottom: 15px; color: var(--accent-color);">Contact Us</h3>
+      <p style="margin: 5px 0;"><a href="tel:240-960-6005" style="color: white; text-decoration: none; transition: color 0.3s;">240-960-6005</a></p>
+      <p style="margin: 5px 0;"><a href="mailto:info@betterdumpsters.com" style="color: white; text-decoration: none; transition: color 0.3s;">info@betterdumpsters.com</a></p>
     </div>
-    <div class="footer-section">
-      <h3>Quick Links</h3>
-      <ul>
-        <li><a href="about.html">About Us</a></li>
-        <li><a href="blog.html">Blog</a></li>
+    <div class="footer-section" style="flex: 1; min-width: 200px;">
+      <h3 style="font-size: 1.5rem; margin-bottom: 15px; color: var(--accent-color);">Quick Links</h3>
+      <ul style="list-style: none; padding: 0; margin: 0;">
+        <li style="margin-bottom: 10px;"><a href="about.html" style="color: white; text-decoration: none; transition: color 0.3s;">About Us</a></li>
+        <li><a href="blog.html" style="color: white; text-decoration: none; transition: color 0.3s;">Blog</a></li>
       </ul>
     </div>
-    <div class="footer-section">
-      <h3>Follow Us</h3>
-      <p><a href="#" aria-label="Facebook">Facebook</a>, <a href="#" aria-label="Instagram">Instagram</a></p>
+    <div class="footer-section" style="flex: 1; min-width: 200px;">
+      <h3 style="font-size: 1.5rem; margin-bottom: 15px; color: var(--accent-color);">Follow Us</h3>
+      <p>
+        <a href="#" aria-label="Facebook" style="color: var(--accent-color); margin-right: 10px; text-decoration: none; font-size: 1.5rem;"><i class="fab fa-facebook"></i></a>
+        <a href="#" aria-label="Instagram" style="color: var(--accent-color); text-decoration: none; font-size: 1.5rem;"><i class="fab fa-instagram"></i></a>
+      </p>
     </div>
   </div>
-  <p class="copyright">Better Dumpsters Today © 2024. All Rights Reserved.</p>
+  <p style="margin-top: 30px; font-size: 0.9rem; color: #aaa;">Better Dumpsters Today © 2024. All Rights Reserved.</p>
 </footer>
+
 
 <!-- Scripts -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/8.0.7/swiper-bundle.min.js" defer></script>
